<resources>
    <string name="app_name">Avi1</string>
    <string name="edit_message">Enter First Name</string>
    <string name="edit_message1">Enter Last Name</string>
    <string name="Gender">Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="button_send">Submit</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">My Message</string>
</resources>
