<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">


    <EditText android:id="@+id/edit_message1"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message1"

        android:layout_gravity="center_horizontal">
    </EditText>


    <EditText android:id="@+id/edit_message"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message"
        android:layout_gravity="center_horizontal" />

    <RadioGroup
        android:id="@+id/Gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/Male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Male"
            android:checked="false"/>/>

        <RadioButton
            android:id="@+id/Female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Female"
            />/>
    </RadioGroup>

    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessage"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
